Fixed UI distortion when keyboard is present. Updated readme

--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,7 +1,7 @@
 .card {
   width: 31%;
   margin-right: 2.3%;
-  height: 34%;
+  height: 60.4vw;
   float: left;
 }
 
@@ -12,5 +12,5 @@
 
 .name {
   color: #bcbec0;
-  font-size: 2.3vh;
+  font-size: 5vw;
 }
