--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,6 +1,6 @@
 .header {
   position: absolute;
-  height: 7%;
+  height: 12.47vw;
   width: 100%;
   background: url("../../assets/nav_bar.png");
   z-index: 1;
@@ -19,7 +19,7 @@
 
 .title {
   position: absolute;
-  font-size: 3vh;
+  font-size: 5.3vw;
   font-weight: lighter;
   color: #bcbec0;
   left: 10%;
@@ -40,11 +40,9 @@
 
 .search-input {
   position: absolute;
-  /* left: 2.3%;
-  width: 95.4%; */
   width: 100%;
   height: 100%;
   z-index: 2;
-  font-size: 4vh;
+  font-size: 5vw;
   padding: 0 2%;
 }
